--- a/cleo-prototype/functions/package.json
+++ b/cleo-prototype/functions/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^12.7.0",
-    "firebase-functions": "^6.3.1"
+    "firebase-functions": "^6.3.2",
+    "openai": "^4.86.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
